# MiniTorch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
bindings/: pybind.cpp
include/: Ops.h  Storage.h  Tensor.h  utils.h
include/autograd/: Edge.h  Engine.h  GradFn.h
include/autograd/ops/: AccumulateGrad.h  AddBackward.h  MatmulGrad.h  MulBackward.h  Ops.h
src/: Ops.cpp  Storage.cpp  Tensor.cpp
src/autograd/: Engine.cpp
src/autograd/ops/: AccumulateGrad.cpp  AddBackward.cpp  MatmulGrad.cpp  MulBackward.cpp  Ops.cpp  cuda_ops.cu
tests/: test_device.cpp  test_matmul.cpp  test_ops.cpp  test_tensor.cpp  test_tensor.py
